# rfoutlet

./: .gitignore  CMakeLists.txt  README.md  photo_take_send.sh
arduino/: arduino.ino
include/: BasePlantIO.h  CacheIO.h  OutletController.h  PhotoHandler.h  PlantExceptions.h  PlantWatcher.h  RCSwitch.h  ScpSender.h  SimpleSerial.h
latex/: .gitignore  automated_plant_care.tex
packer/: aws_docker.json  install_docker.sh
python/: Dockerfile  arduino_test_read.py  data_table.py  docker-compose.yml  main.py
rf_frontend/: data_table.py  docker-compose.yml  main.py  photo_parse.py  util.py
src/: .gitignore  CMakeLists.txt  CacheIO.cpp  Makefile  OutletController.cpp  PhotoHandler.cpp  PlantWatcher.cpp  RCSwitch.cpp  ScpSender.cpp  SimpleSerial.cpp  main.cpp
terraform/: .gitignore  launch_fe.sh  main.tf  variables.tf  vpc.tf
